<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:layout_margin="8dp"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="8dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_food_one"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_food_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/food_one"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_food_one_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_food_one_description"
            app:layout_constraintEnd_toStartOf="@id/iv_food_dropDown"
            app:layout_constraintStart_toEndOf="@id/cv_food_one"
            app:layout_constraintTop_toTopOf="@id/cv_food_one"
            tools:text="Bombas" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_food_one_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:alpha="0.5"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/iv_food_dropDown"
            app:layout_constraintStart_toStartOf="@id/tv_food_one_title"
            app:layout_constraintTop_toBottomOf="@id/tv_food_one_title"
            tools:text="Fried potato" />

        <View
            android:id="@+id/view_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:alpha="0.2"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_food_one_description"
            app:layout_constraintTop_toBottomOf="@id/cv_food_one" />

        <ImageView
            android:id="@+id/iv_food_dropDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dropdown_image"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
            app:layout_constraintBottom_toBottomOf="@id/tv_food_one_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_food_one_description"
            app:layout_constraintTop_toTopOf="@id/tv_food_one_title" />

        <LinearLayout
            android:id="@+id/ll_food_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_line">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_about_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/about"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:lineSpacingMultiplier="1.2"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="Fried potato Fried potatoFried potatoFried potatoFried potatoFried potatoFried potatoFried potatoFried potatoFried potatoFried potatoFried potato" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_where_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/where_to_eat"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_where"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:lineSpacingMultiplier="1.2"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="1. Chillis(4km from City centre) \n2. Chillis(4km from City centre)" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_best_dishes_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:text="Best Paella dishes" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_best_dishes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:lineSpacingMultiplier="1.2"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="1. Ravioli Paella\n2. Pesto Paella" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_photo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/photo"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/photo_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_read_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:alpha="0.5"
                android:text="@string/see_more"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>