<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="100dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_card_heading1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/curated_for_mayank"
                    android:textAllCaps="true"
                    android:textColor="@android:color/holo_blue_light"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_card_heading2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_card_heading1"
                    tools:text="4 Must Try Local Foods in" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cv_food_one"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="4dp"
                    app:layout_constraintStart_toStartOf="@id/tv_card_heading2"
                    app:layout_constraintTop_toBottomOf="@id/tv_card_heading2">

                    <ImageView
                        android:id="@+id/iv_food_one"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/food_one"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_background" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_food_one_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tv_food_one_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cv_food_one"
                    app:layout_constraintTop_toTopOf="@id/cv_food_one"
                    tools:text="Bombas" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_food_one_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="10dp"
                    android:alpha="0.5"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_food_one_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_food_one_title"
                    tools:text="Fried potato" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="10dp"
                    android:alpha="0.2"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_food_one_description"
                    app:layout_constraintTop_toBottomOf="@id/cv_food_one" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cv_food_two"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="4dp"
                    app:layout_constraintStart_toStartOf="@id/tv_card_heading2"
                    app:layout_constraintTop_toBottomOf="@id/cv_food_one">

                    <ImageView
                        android:id="@+id/iv_food_two"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/food_two"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_background" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_food_two_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tv_food_two_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cv_food_two"
                    app:layout_constraintTop_toTopOf="@id/cv_food_two"
                    tools:text="Pealla" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_food_two_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="10dp"
                    android:alpha="0.5"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_food_two_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_food_two_title"
                    tools:text="Rice dish" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="10dp"
                    android:alpha="0.2"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_food_two_description"
                    app:layout_constraintTop_toBottomOf="@id/cv_food_two" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_see_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:alpha="0.5"
                    android:text="@string/see_more"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cv_food_two" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/bottom_sheet_blog_detail"
        layout="@layout/bottom_sheet_blog_detail" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>